trying to add callbacks for cr2w variable editing but it doesn't work

--- a/WolvenKit/Views/Editor/Documents/DocumentView.xaml
+++ b/WolvenKit/Views/Editor/Documents/DocumentView.xaml
@@ -428,6 +428,7 @@
                         </Grid.ColumnDefinitions>-->
 
                         <syncfusion:SfTreeGrid
+                            x:Name="MainTreeGrid"
                             AllowFiltering="True"
                             AllowResizingColumns="True"
                             AutoExpandMode="RootNodesExpanded"
