--- a/WolvenKit/Views/Shell/MainView.xaml
+++ b/WolvenKit/Views/Shell/MainView.xaml
@@ -15,6 +15,8 @@
     ShowIcon="False"
     TitleBarBackground="Transparent"
     TitleTextAlignment="Right"
+    ResizeMode="CanResizeWithGrip"
+    UseNativeChrome="True"
     >
 
     <syncfusion:ChromelessWindow.Resources>
